config prj (.properties -> .yaml)